--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
 install:
   - docker-compose up -d
 script:
-  - docker-compose wp --info
+  - docker-compose exec wp cli --info
 after_script:
   - docker-compose stop
   - docker-compose rm -f
