--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,11 @@ services:
   - docker
 install:
   - docker-compose up -d
+before_script:
+  - gem install nightmare
 script:
+  - docker-compose exec wp cli install --url=127.0.0.1 --title="Speedmaster Test" --admin_user=admin --admin_password=password --admin_email=info@localhost
+  - docker-compose exec wp cli theme activate speedmaster-test --allow-root
   - docker-compose exec wp cli --info
 after_script:
   - docker-compose stop
