--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,12 @@ services:
 install:
   - docker-compose up -d
 before_script:
-  - gem install nightmare
+  - gem install mechanize
 script:
   - docker-compose exec wp cli install --url=127.0.0.1 --title="Speedmaster Test" --admin_user=admin --admin_password=password --admin_email=info@localhost
   - docker-compose exec wp cli theme activate speedmaster-test --allow-root
   - docker-compose exec wp cli --info
 after_script:
+  - ruby tests/test.rb
   - docker-compose stop
   - docker-compose rm -f
